# SCIoT

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codecov.yml
client/esp32-s3-eye/: README.md
server/: README.md  pyproject.toml
server/src/device/: device_initialization.py
server/src/edge/: edge_initialization.py
server/src/models/: model_manager.py
server/src/mqtt_client/: mqtt_client.py  mqtt_custom_message.py
server/tests/fixtures/: mqtt_client_fixture.py  offloading_fixtures.py
server/tests/test_mqtt_client/: test_mqtt_client.py
server/tests/test_offloading_algo/: test_offloading_algo.py
src/client/esp32-s3-eye-websocket/src/: main.cpp
src/server/: commons.py  edge_inference_times.json  settings.yaml
src/server/communication/: http_server.py  mqtt_client.py  request_handler.py  websocket_server.py
src/server/edge/: edge_initialization.py  run_edge.py
src/server/models/: model_manager.py
src/server/mqtt_client/: mqtt_client.py  mqtt_custom_message.py
src/server/web/: webpage.py
tests/fixtures/: mqtt_client_fixture.py
tests/test_edge/: test_edge.py
